# space-shooter-server

./: CMakeLists.txt  Makefile  README.md  color.h  cpsock.h  cptime.h  detect-platform.h  rnd.h  server.c
src/: CMakeLists.txt  color.c  color.h  cpsock.c  cpsock.h  cptime.c  cptime.h  main.c  rnd.c  rnd.h  serialization.c  serialization.h  server.c  vec.h  vec2f.c  vec2f.h  vector.c  vector.h
